<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        tools:ignore="RtlSymmetry">

        <LinearLayout
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@drawable/bg_grey_round_rect_corner_8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/des_search"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="@color/grey_600" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnSetting"
            android:layout_width="@dimen/image_button_size"
            android:layout_height="@dimen/image_button_size"
            android:background="@drawable/bg_button_48dp"
            android:contentDescription="@string/des_setting"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_setting" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivAlbumIcon"
            android:layout_width="@dimen/album_icon_size"
            android:layout_height="@dimen/album_icon_size"
            android:contentDescription="@string/des_album_icon"
            android:scaleType="centerInside"
            tools:background="@color/deep_purple_400"
            tools:src="@drawable/ic_logo_200dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/tvArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/app_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/itemLocalMusic"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/bg_navigation_item"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/des_local_music"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_local_music" />

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_local_music" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemFavorite"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/bg_navigation_item"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/des_favorite"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_my_favorite" />

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_favorite" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemMusicList"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/bg_navigation_item"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/des_music_list"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_music_list" />

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_music_list" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/itemArtist"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/bg_navigation_item"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/des_artist"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_artist" />

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_artist" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemAlbum"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/bg_navigation_item"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/des_album"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_album" />

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_album" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemHistory"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/bg_navigation_item"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/des_history"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_history" />

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_history" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/separatorLine"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey_300" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_gravity="center"
                android:background="@drawable/bg_button_48dp"
                android:contentDescription="@string/des_toggle_favorite"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_favorite_false" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_gravity="center"
                android:background="@drawable/bg_button_48dp"
                android:contentDescription="@string/des_skip_to_previous"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_skip_to_previous" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_play_pause"
                android:contentDescription="@string/des_play_pause"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_play" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_gravity="center"
                android:background="@drawable/bg_button_48dp"
                android:contentDescription="@string/des_skip_to_next"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_skip_to_next" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_gravity="center"
                android:background="@drawable/bg_button_48dp"
                android:contentDescription="@string/des_show_playlist"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_playlist" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>