<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="snow.music.activity.setting.SettingActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:background="@drawable/bg_button_48dp"
                android:contentDescription="@string/des_back"
                android:onClick="finishSelf"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_back"
                app:tint="@color/colorIconTint" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_settings"
                android:textSize="@dimen/action_bar_title_text_size" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:background="@color/colorDivider" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorWindowBackground"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/item_title_dark_mode"
                android:textColor="@color/colorSecondaryText" />

            <LinearLayout
                android:id="@+id/itemFollowSystem"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_list_item"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/item_dark_mode_follow_system"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/ivChecked"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/des_checked"
                    android:scaleType="centerInside"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_checkbox_checked"
                    tools:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemDarkModeOff"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_list_item"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/item_dark_mode_off"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@id/ivChecked"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/des_checked"
                    android:scaleType="centerInside"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_checkbox_checked"
                    tools:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemDarkModeOn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_list_item"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/item_dark_mode_on"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@id/ivChecked"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/des_checked"
                    android:scaleType="centerInside"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_checkbox_checked"
                    tools:visibility="visible" />

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/colorSettingSpace" />

        <LinearLayout
            android:id="@+id/itemPlayWithOtherApp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_list_item"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/item_play_with_other_app"
                android:textSize="15sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swPlayWithOtherApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingBottom="16dp"
            android:text="@string/description_play_with_other_app"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingBottom="16dp"
            android:text="@string/description_read_phone_state_rationale"
            android:textColor="@color/colorSecondaryText"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorSettingSpace" />

    </LinearLayout>

</LinearLayout>